--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <script src="../js/home.js"></script>
     <title>OK</title>
 </head>
 <body>
