Ajustado para recursos da Hi

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -320,7 +320,7 @@
     color: white;
     font-size: 24px;
     font-weight: 700;
-    background-color: #ff8100;
+    background-color: #00ADEE;
     margin-right: 10px;
   }
   .layout .sidebar .pro-sidebar-logo > h5 {
