--- a/templates/index.html
+++ b/templates/index.html
@@ -1,158 +1,208 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>FAQ - Customer Care</title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css'>
   <link rel='stylesheet' href='https://unpkg.com/css-pro-layout@1.1.0/dist/css/css-pro-layout.css'>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel='stylesheet'
+    href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+
 <body>
-<div class="layout has-sidebar fixed-sidebar fixed-header">
-      <aside id="sidebar" class="sidebar break-point-sm has-bg-image">
-        <a id="btn-collapse" class="sidebar-collapser"><i class="ri-arrow-left-s-line"></i></a>
-        <div class="image-wrapper">
-          <img src="assets/images/sidebar-bg.jpg" alt="sidebar background" />
+  <div class="layout has-sidebar fixed-sidebar fixed-header">
+    <aside id="sidebar" class="sidebar break-point-sm has-bg-image">
+      <a id="btn-collapse" class="sidebar-collapser"><i class="ri-arrow-left-s-line"></i></a>
+      <div class="sidebar-layout">
+        <div class="sidebar-header">
+          <div class="pro-sidebar-logo">
+            <div>Hi</div>
+            <h5>Customer Care</h5>
+          </div>
         </div>
-        <div class="sidebar-layout">
-          <div class="sidebar-header">
-            <div class="pro-sidebar-logo">
-              <div>Hi</div>
-              <h5>Customer Care</h5>
+        <div class="sidebar-content">
+          <nav class="menu open-current-submenu">
+            <ul>
+              <li class="menu-header"><span> MENU </span></li>
+              <li class="menu-item sub-menu">
+                <a href="#">
+                  <span class="menu-icon">
+                    <i class="ri-book-2-fill"></i>
+                  </span>
+                  <span class="menu-title">Troubleshooting</span>
+                </a>
+                <div class="sub-menu-list">
+                  <ul>
+                    <li class="menu-item">
+                      <a href="#">
+                        <span class="menu-title">HiInbox</span>
+                      </a>
+                    </li>
+                    <li class="menu-item">
+                      <a href="#">
+                        <span class="menu-title">HiSocial</span>
+                      </a>
+                    </li>
+                    <li class="menu-item sub-menu">
+                      <a href="#">
+                        <span class="menu-title">DirectTalk</span>
+                      </a>
+                      <div class="sub-menu-list">
+                        <ul>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">HiBot</span>
+                            </a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">HiChat</span>
+                            </a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">HiFAQ</span>
+                            </a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">HiPhone</span>
+                            </a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">HiMail</span>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+                    <li class="menu-item sub-menu">
+                      <a href="#">
+                        <span class="menu-title">YourViews</span>
+                      </a>
+                      <div class="sub-menu-list">
+                        <ul>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">Reviews</span>
+                            </a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="#">
+                              <span class="menu-title">Voices</span>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </li>
+
+                  </ul>
+                </div>
+              </li>
+              <li class="menu-header" style="padding-top: 20px"><span> AÇÕES </span></li>
+              <li class="menu-item">
+                <a href="#">
+                  <span class="menu-icon">
+                    <i class="ri-folder-image-fill"></i>
+                  </span>
+                  <span class="menu-title">HiFiles</span>
+                  <span class="menu-suffix">
+                    <span class="badge secondary">Beta</span>
+                  </span>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#">
+                  <span class="menu-icon">
+                    <i class="ri-android-fill"></i>
+                  </span>
+                  <span class="menu-title">Tenants</span>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#">
+                  <span class="menu-icon">
+                    <i class="ri-calendar-schedule-fill"></i>
+                  </span>
+                  <span class="menu-title">Squads Overview</span>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#">
+                  <span class="menu-icon">
+                    <i class="ri-calendar-schedule-fill"></i>
+                  </span>
+                  <span class="menu-title">Chat Overview</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+    <div id="overlay" class="overlay"></div>
+    <div class="layout">
+      <main class="content">
+        <div class="troubleshooting">
+          <div class="inbox">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Inbox
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Conteúdo inbox
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="sidebar-content">
-            <nav class="menu open-current-submenu">
-              <ul>
-                <li class="menu-header"><span> MENU </span></li>
-                <li class="menu-item sub-menu">
-                  <a href="#">
-                    <span class="menu-icon">
-                      <i class="ri-book-2-fill"></i>
-                    </span>
-                    <span class="menu-title">Troubleshooting</span>
-                  </a>
-                  <div class="sub-menu-list">
-                    <ul>
-                      <li class="menu-item">
-                        <a href="#">
-                          <span class="menu-title">HiInbox</span>
-                        </a>
-                      </li>
-                      <li class="menu-item">
-                        <a href="#">
-                          <span class="menu-title">HiSocial</span>
-                        </a>
-                      </li>
-                      <li class="menu-item sub-menu">
-                        <a href="#">
-                          <span class="menu-title">DirectTalk</span>
-                        </a>
-                        <div class="sub-menu-list">
-                          <ul>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">HiBot</span>
-                              </a>
-                            </li>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">HiChat</span>
-                              </a>
-                            </li>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">HiFAQ</span>
-                              </a>
-                            </li>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">HiPhone</span>
-                              </a>
-                            </li>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">HiMail</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </div>
-                      </li>
-                      <li class="menu-item sub-menu">
-                        <a href="#">
-                          <span class="menu-title">YourViews</span>
-                        </a>
-                        <div class="sub-menu-list">
-                          <ul>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">Reviews</span>
-                              </a>
-                            </li>
-                            <li class="menu-item">
-                              <a href="#">
-                                <span class="menu-title">Voices</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </div>
-                      </li>
-                      
-                    </ul>
+          <div class="social">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Social
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Conteúdo Social
                   </div>
-                </li>
-                <li class="menu-header" style="padding-top: 20px"><span> AÇÕES </span></li>
-                <li class="menu-item">
-                  <a href="#">
-                    <span class="menu-icon">
-                      <i class="ri-folder-image-fill"></i>
-                    </span>
-                    <span class="menu-title">HiFiles</span>
-                    <span class="menu-suffix">
-                      <span class="badge secondary">Beta</span>
-                    </span>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="#">
-                    <span class="menu-icon">
-                      <i class="ri-android-fill"></i>
-                    </span>
-                    <span class="menu-title">Tenants</span>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="#">
-                    <span class="menu-icon">
-                      <i class="ri-calendar-schedule-fill"></i>
-                    </span>
-                    <span class="menu-title">Squads Overview</span>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="#">
-                    <span class="menu-icon">
-                      <i class="ri-calendar-schedule-fill"></i>
-                    </span>
-                    <span class="menu-title">Chat Overview</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="directtalk">
+          </div>
+          <div class="yourviews">
           </div>
         </div>
-      </aside>
-      <div id="overlay" class="overlay"></div>
-      <div class="layout">
-        <main class="content">
-
-        </main>
-        <div class="overlay"></div>
-      </div>
+      </main>
+      <div class="overlay"></div>
     </div>
+  </div>
   <script src='https://unpkg.com/@popperjs/core@2'></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
