--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -40,12 +41,12 @@
                   <ul>
                     <li class="menu-item">
                       <a href="#">
-                        <span class="menu-title">HiInbox</span>
+                        <span class="menu-title">Hi Inbox</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="#">
-                        <span class="menu-title">HiSocial</span>
+                        <span class="menu-title">Hi Social</span>
                       </a>
                     </li>
                     <li class="menu-item sub-menu">
@@ -56,27 +57,27 @@
                         <ul>
                           <li class="menu-item">
                             <a href="#">
-                              <span class="menu-title">HiBot</span>
+                              <span class="menu-title">Hi Bot</span>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
-                              <span class="menu-title">HiChat</span>
+                              <span class="menu-title">Hi Chat</span>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
-                              <span class="menu-title">HiFAQ</span>
+                              <span class="menu-title">Hi FAQ</span>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
-                              <span class="menu-title">HiPhone</span>
+                              <span class="menu-title">Hi Phone</span>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
-                              <span class="menu-title">HiMail</span>
+                              <span class="menu-title">Hi Mail</span>
                             </a>
                           </li>
                         </ul>
@@ -151,38 +152,10 @@
       <main class="content">
         <div class="troubleshooting">
           <div class="inbox">
-            <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    Inbox
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    Conteúdo inbox
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
           <div class="social">
-            <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    Social
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    Conteúdo Social
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
           <div class="directtalk">
           </div>
