--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>FAQ - Customer Care</title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css'>
   <link rel='stylesheet' href='https://unpkg.com/css-pro-layout@1.1.0/dist/css/css-pro-layout.css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,11 +43,17 @@
                     <li class="menu-item">
                       <a href="#">
                         <span class="menu-title">Hi Inbox</span>
+                        <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                        </svg>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="#">
                         <span class="menu-title">Hi Social</span>
+                        <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                        </svg>
                       </a>
                     </li>
                     <li class="menu-item sub-menu">
@@ -58,26 +65,41 @@
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Hi Bot</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Hi Chat</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Hi FAQ</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Hi Phone</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Hi Mail</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                         </ul>
@@ -92,11 +114,17 @@
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Reviews</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                           <li class="menu-item">
                             <a href="#">
                               <span class="menu-title">Voices</span>
+                              <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                              <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                              </svg>
                             </a>
                           </li>
                         </ul>
@@ -165,6 +193,15 @@
       </main>
       <div class="overlay"></div>
     </div>
+  </div>
+  <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+              <div class="modal-body text-center">
+                  <h4 id="loadingModalLabel">Aguarde</h4>
+              </div>
+          </div>
+      </div>
   </div>
   <script src='https://unpkg.com/@popperjs/core@2'></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
