--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,14 @@
                         </svg>
                       </a>
                     </li>
+                    <li class="menu-item">
+                      <a href="#">
+                        <span class="menu-title">Hi Flow</span>
+                        <svg class="newArticleButton" data-toggle="tooltip" title="Criar novo artigo" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="25" viewBox="0,0,256,256">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M44,24c0,11 -9,20 -20,20c-11,0 -20,-9 -20,-20c0,-11 9,-20 20,-20c11,0 20,9 20,20z" fill="#1e7bc8"></path><path d="M21,14h6v20h-6z" fill="#ffffff"></path><path d="M14,21h20v6h-20z" fill="#ffffff"></path></g></g>
+                        </svg>
+                      </a>
+                    </li>
                     <li class="menu-item sub-menu">
                       <a href="#">
                         <span class="menu-title">DirectTalk</span>
@@ -180,15 +188,25 @@
       <main class="content">
         <div class="troubleshooting">
           <div class="inbox">
-
           </div>
           <div class="social">
-
           </div>
-          <div class="directtalk">
+          <div class="flow">
+            </div>
+          <div class="bot">
           </div>
-          <div class="yourviews">
+          <div class="chat">
+            </div>
+          <div class="faq">
+            </div>
+          <div class="phone">
+            </div>
+          <div class="mail">
+            </div>
+          <div class="reviews">
           </div>
+          <div class="voices">
+            </div>
         </div>
       </main>
       <div class="overlay"></div>
