--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>FAQ - Customer Care</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css'>
   <link rel='stylesheet' href='https://unpkg.com/css-pro-layout@1.1.0/dist/css/css-pro-layout.css'>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel='stylesheet'
-    href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap'>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -200,20 +198,30 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
               <div class="modal-body text-center">
-                <form class="newArticleForm">
-                  <select id="categorySelect" class="form-select" aria-label="categorySelect">
-                    <option selected>Selecione uma categoria</option>
-                    <option value="1">Hi Inbox</option>
-                  </select>
-                  <div id="articleTitle" class="input-group mb-3">
-                    <span class="input-group-text" id="articleTitle"></span>
-                    <input type="text" class="form-control" placeholder="Descrição" aria-label="title" aria-describedby="articleTitle">
+                <div class="formbold-main-wrapper">
+                  <div class="formbold-form-wrapper">
+                    <form id="newArticleForm" method="POST" action="http://127.0.0.1:8080/newarticle">
+                        <div class="formbold-input-flex">
+                          <select id="categorySelect" class="form-select" aria-label="categorySelect">
+                            <option selected>Selecione uma categoria</option>
+                          </select>
+                        </div>
+                        <div class="formbold-input-flex">
+                          <div>
+                              <input type="text"name="articleTitle" id="articleTitle" placeholder="Ex: Como configurar novas contas de e-mail?" class="formbold-form-input"/>
+                              <label for="articleTitle" class="formbold-form-label"> Título </label>
+                          </div>
+                        </div>
+                        <div class="formbold-textarea">
+                            <textarea rows="6" name="message" id="message" placeholder="Digite aqui..." class="formbold-form-input"></textarea>
+                            <label for="message" class="formbold-form-label"> Conteúdo </label>
+                        </div> 
+                        <button id="newArticleSubmit" class="formbold-btn">
+                            Criar
+                        </button>
+                    </form>
                   </div>
-                  <div id="articleContent" class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Conteúdo" aria-label="content" aria-describedby="articleContent">
-                  </div>
-                  <input type="submit" class="btn btn-success" value="Criar">
-                </form>
+                </div>  
               </div>
           </div>
       </div>
@@ -221,12 +229,7 @@
   <script src='https://unpkg.com/@popperjs/core@2'></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
-
 </html>
