Inserido um toast para avisar que o artigo foi criado com sucesso

--- a/templates/index.html
+++ b/templates/index.html
@@ -226,6 +226,16 @@
           </div>
       </div>
   </div>
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="me-auto">Sucesso!</strong>
+        <small>Agora</small>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body">Artigo Criado.</div>
+    </div>
+  </div>
   <script src='https://unpkg.com/@popperjs/core@2'></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
