--- a/templates/index.html
+++ b/templates/index.html
@@ -190,6 +190,11 @@
           <div class="modal-content">
               <div class="modal-body text-center">
                   <h4 id="loadingModalLabel">Aguarde</h4>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; background: rgb(255, 255, 255); display: block; shape-rendering: auto;" width="94px" height="94px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+                    <circle cx="50" cy="50" fill="none" stroke="#382d9a" stroke-width="4" r="16" stroke-dasharray="75.39822368615503 27.132741228718345">
+                      <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="0.36764705882352944s" values="0 50 50;360 50 50" keyTimes="0;1"></animateTransform>
+                    </circle>
+                    </svg>
               </div>
           </div>
       </div>
@@ -229,7 +234,10 @@
   <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
-        <strong class="me-auto">Sucesso!</strong>
+        <strong class="me-auto">Sucesso! <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50"
+          style="fill:#40C057;">
+          <path d="M25,2C12.318,2,2,12.318,2,25c0,12.683,10.318,23,23,23c12.683,0,23-10.317,23-23C48,12.318,37.683,2,25,2z M35.827,16.562	L24.316,33.525l-8.997-8.349c-0.405-0.375-0.429-1.008-0.053-1.413c0.375-0.406,1.009-0.428,1.413-0.053l7.29,6.764l10.203-15.036	c0.311-0.457,0.933-0.575,1.389-0.266C36.019,15.482,36.138,16.104,35.827,16.562z"></path>
+          </svg></strong>
         <small>Agora</small>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
