Função criada para automatizar exibição/ocultação de divs na tela // busca de clientes do alexandria funcionando e retornando dados

--- a/templates/index.html
+++ b/templates/index.html
@@ -182,11 +182,11 @@
             </div>
         </div>
         <div class="files">
-
         </div>
         <div class="tenants">
-            
-        </div>
+          <input type="text" id="search-box" placeholder="Exemplo: Hi Platform">
+          <ul id="results-list" class="results-list"></ul>
+      </div>
       </main>
       <div class="overlay"></div>
     </div>
