--- a/static/css/style.css
+++ b/static/css/style.css
@@ -646,4 +646,34 @@ a {
     #articleTitle{
       width: 200%;
     }
-
+  
+  #search-box {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      cursor: pointer;
+  }
+  
+  .results-list {
+      display: none;
+      width: 100%;
+      max-height: 150px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      border-top: none;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      background-color: #ccc;
+  }
+  
+  .results-list li {
+      padding: 10px;
+      cursor: pointer;
+  }
+  
+  .results-list li:hover {
+      background-color: #f0f0f0;
+  }
+  
