--- a/templates/index.html
+++ b/templates/index.html
@@ -184,9 +184,27 @@
         <div class="files">
         </div>
         <div class="tenants">
-          <input type="text" id="search-box" placeholder="Exemplo: Hi Platform">
-          <ul id="results-list" class="results-list"></ul>
+          <div class="searchContainer">
+              <input type="text" id="search-box" placeholder="Exemplo: Hi Platform">
+              <ul id="results-list" class="results-list" style="display: block; max-height: 150px; margin-left: 25%; width: 50%;"></ul>
+          </div>
+          <div class="cards">
+              <div class="card green">
+                  <p class="tip">Hover Me</p>
+                  <p class="second-text">Lorem Ipsum</p>
+              </div>
+              <div class="card green">
+                <p class="tip">Hover Me</p>
+                <p class="second-text">Lorem Ipsum</p>
+            </div>
+            <div class="card green">
+              <p class="tip">Hover Me</p>
+              <p class="second-text">Lorem Ipsum</p>
+          </div>
+          
+          </div>
       </div>
+      
       </main>
       <div class="overlay"></div>
     </div>
