--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -190,14 +191,23 @@
           </div>
           <div class="cards">
               <div class="card green">
-                  <p class="tip">Hover Me</p>
-                  <p class="second-text">Lorem Ipsum</p>
+                <div id="WhatsappIconTitle" class="icon icon-lg icon-shape bg-gradient-dark shadow-dark shadow text-center border-radius-xl mt-n4 position-absolute">
+                  <i id="whatsappIcon" class="fa fa-whatsapp fa-2x" aria-hidden="true"></i>
+                </div>
+                  <p class="tip"></p>
+                  <p class="tip"></p>
               </div>
               <div class="card green">
+                <div id="accountIconTitle" class="icon icon-lg icon-shape bg-gradient-dark shadow-dark shadow text-center border-radius-xl mt-n4 position-absolute">
+                  <i id="accountIcon" class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+                </div>
                 <p class="tip">Hover Me</p>
                 <p class="second-text">Lorem Ipsum</p>
             </div>
             <div class="card green">
+              <div id="accountIconTitle" class="icon icon-lg icon-shape bg-gradient-dark shadow-dark shadow text-center border-radius-xl mt-n4 position-absolute">
+                <i id="accountIcon" class="fa fa-users fa-2x" aria-hidden="true"></i>
+              </div>
               <p class="tip">Hover Me</p>
               <p class="second-text">Lorem Ipsum</p>
           </div>
