CORS policy ajustado

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>FAQ - Customer Care</title>
+  <title>Hub Suporte</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css'>
   <link rel='stylesheet' href='https://unpkg.com/css-pro-layout@1.1.0/dist/css/css-pro-layout.css'>
